tests/neg-custom-args/captures/cc-this4.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/cc-this4.scala:2:13 --------------------------------------
2 |  val x: C = this  // error
  |             ^^^^
  |             Found:    (C.this : C^)
  |             Required: C
  |
  |             Note that capability any is not included in capture set {}.
  |
  |             where:    ^ and any refer to the universal root capability
  |
  | longer explanation available when compiling with `-explain`
